--- a/Makefile.config
+++ b/Makefile.config
@@ -2,7 +2,7 @@
 
 USE_DEBUG = yes
 USE_CLANG = no
-CFLAGS = -DPBC_SUPPORT
+CFLAGS = -DPBC_SUPPORT -ggdb
 LDFLAGS =
 LIBS = m gmp nettle hogweed pbc
 PROGS = $(basename $(wildcard main.c))
